// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker renders child components as expected accessibility concerns provides aria-invalid and aria-describedby attrs on calendar when there is an error 1`] = `
<div>
  <fieldset>
    <Flex
      direction="row"
    >
      <FlexItem>
        <CalendarComponent
          aria-describedby="calendar-error-1503418845095"
          aria-invalid={true}
          className="field--error"
          datetimePickerCallback={[Function]}
          name="start_time"
          onBlur={[Function]}
          onFocus={[Function]}
          value={2017-08-22T04:00:00.000Z}
        />
      </FlexItem>
      <FlexItem>
        <TimeInput
          className="field--error"
          datetimePickerCallback={[Function]}
          id="undefined-time"
          name="start_time-time"
          onBlur={[Function]}
          onFocus={[Function]}
          value="12:20"
        />
      </FlexItem>
    </Flex>
  </fieldset>
  <p
    className="text--error"
    id="calendar-error-1503418845095"
  >
    Too late
  </p>
</div>
`;

exports[`DateTimePicker renders child components as expected accessibility concerns renders a fieldset for date and time, with optional offscreen legend for a11y 1`] = `
<div>
  <CalendarComponent
    className=""
    datetimePickerCallback={[Function]}
    name="start_time"
    onBlur={null}
    onFocus={null}
    opts={true}
    value={2017-08-22T04:00:00.000Z}
  />
</div>
`;

exports[`DateTimePicker renders child components as expected passes expected props and value to calendar and time 1`] = `
<div>
  <fieldset>
    <Flex
      direction="row"
    >
      <FlexItem>
        <CalendarComponent
          aria-describedby="calendar-error-1503418844941"
          aria-invalid={true}
          className="field--error"
          datetimePickerCallback={[Function]}
          id="event_start"
          name="start_time"
          onBlur={[Function]}
          onFocus={[Function]}
          opts={true}
          value={2018-01-01T05:00:00.000Z}
        />
      </FlexItem>
      <FlexItem>
        <TimeInput
          className="field--error"
          datetimePickerCallback={[Function]}
          id="event_start-time"
          name="start_time-time"
          onBlur={[Function]}
          onFocus={[Function]}
          value="18:11"
        />
      </FlexItem>
    </Flex>
  </fieldset>
  <p
    className="text--error"
    id="calendar-error-1503418844941"
  >
    Too late
  </p>
</div>
`;

exports[`DateTimePicker renders child components as expected renders a date component only if dateOnly specified, with no focus and blur props 1`] = `
<div>
  <CalendarComponent
    className=""
    datetimePickerCallback={[Function]}
    name="start_time"
    onBlur={null}
    onFocus={null}
    opts={true}
    value={2017-08-22T04:00:00.000Z}
  />
</div>
`;
